cmake_minimum_required(VERSION 3.16)
project(lmcrack LANGUAGES C CXX)

option(LMCRACK_ENABLE_SSE2 "Enable SSE2 optimizations" ON)
option(LMCRACK_ENABLE_AVX2 "Enable AVX2 optimizations" OFF)
option(LMCRACK_ENABLE_AVX512 "Enable AVX-512 optimizations" OFF)

add_executable(lmcrack lmcrack.cpp)
add_executable(lmhash hash.c)

target_include_directories(lmcrack PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(lmhash PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

target_compile_features(lmcrack PRIVATE cxx_std_11)
set_target_properties(lmhash PROPERTIES C_STANDARD 99 C_STANDARD_REQUIRED YES)

find_package(Threads REQUIRED)
target_link_libraries(lmcrack PRIVATE Threads::Threads)

if (LMCRACK_ENABLE_AVX512)
  target_compile_definitions(lmcrack PRIVATE AVX512)
  if (MSVC)
    target_compile_options(lmcrack PRIVATE /arch:AVX512)
  else()
    target_compile_options(lmcrack PRIVATE -mavx512f)
  endif()
elseif (LMCRACK_ENABLE_AVX2)
  target_compile_definitions(lmcrack PRIVATE AVX2)
  if (MSVC)
    target_compile_options(lmcrack PRIVATE /arch:AVX2)
  else()
    target_compile_options(lmcrack PRIVATE -mavx2)
  endif()
elseif (LMCRACK_ENABLE_SSE2)
  target_compile_definitions(lmcrack PRIVATE SSE2)
  if (MSVC)
    target_compile_options(lmcrack PRIVATE /arch:SSE2)
  else()
    target_compile_options(lmcrack PRIVATE -msse2)
  endif()
endif()
